# CPPRobotics

./: CMakeLists.txt  main.cpp
Visualize/: plot_speed.py  visualize_trajectory.py
control/: CMakeLists.txt
control/lqr_control/src/: CMakeLists.txt  CPPRobotics.code-workspace  lqr_speed_control.cpp  lqr_speed_control.hpp
planning/path_fitting/clothoid/: clothoid_path.cpp  clothoid_path.hpp  readme.md
planning/path_fitting/clothoid/src/: CMakeLists.txt  clothoid_path.cpp  clothoid_path.hpp
planning/path_searching/A_star/: software-design.md
planning/path_searching/A_star/src/: CMakeLists.txt  MathUtils.h  Model.h  Plan.h  main.cpp
planning/path_searching/A_star/tests/: CMakeLists.txt
prototyping/localization/: CMakeLists.txt  main.cpp
tests/Speed_profile/: CMakeLists.txt  my_test_main.cpp  plot_speed.py  speed_profile.cpp  speed_profile.hpp  test_speed_profile.cpp
